# svc-platform

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE.md  Makefile  README.md
docs/: ENGINEERING_PRINCIPLES.md  MASTER.md  decision-log.md  project-constitution.md
firmware/: Makefile  README.md
firmware/bootloader/stm32h5/: CMakeLists.txt  README.md  oemirot-integration.md
firmware/bootloader/stm32h5/src/: stm32_update_port.c  stm32_update_port.h
firmware/bootloader/stm32h5/tests/: test_stm32_update_port.c
firmware/radio/e73/: CMakeLists.txt  README.md  prj.conf  west.yml
firmware/radio/e73/src/: ble_uart_bridge.c  ble_uart_bridge.h  main.c  mcuboot_control.c  mcuboot_control.h  telemetry_stub.c  telemetry_stub.h
hardware/: README.md
production/: README.md
tools/: add_pb100_manual_routes.py  analyze_pb100_unconnected.py  attach_pb100_plane_islands.py  board_order_status.py  export_pb100_routing.py  extract_kicad_routing.py  generate_fb100_layout.py  generate_lb100_evt_package.py  generate_lb100_layout.py  generate_lb_fb_release_evidence.py  generate_lb_fb_schematics.py  generate_pb100_fog_entry_schematic.py  generate_pb100_layout.py  generate_pb100_release_evidence.py  generate_pb100_schematics.py  generate_q2_coupon_prefab_screening.py  generate_q2_qualification_coupon.py  package_firmware_release.py  pb100_release_status.py  route_pb100_connection.py  route_pb100_residual.py  seed_pb100_plane_vias.py  select_ios_simulator.py  sign_firmware_review.py  stitch_pb100_planes.py  validate_board_order.py  validate_board_schematics.py  validate_config.py  (+8 more)
(+740 files in other folders)
